css/main.css
@charset "UTF-8";

/*--------------------------------------------------------------
>>> CSS STANDARDS
----------------------------------------------------------------
1. Place in appropriate section
2. Add new sections to the Table of Contents as needed
3. Order properties consistently inside each declaration i.e. alphabetically or by function 
4. Declaration selectors should each occupy a new line
5. Enter one new line between rules
6. Enter more than one new line between categories 
--------------------------------------------------------------*/

/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
1.0 - Settings: used with preprocessors and contain font, colors definitions, etc.
2.0 - Tools: globally used mixins and functions. Use for preprocessor only.
3.0 - Generic: reset and/or normalize styles, box-sizing definition, etc. 
4.0 - Elements: styling for bare/generic HTML elements 
        - Forms
        - Lists
        - Media
        - Tables
        - Typography: Headings, Paragraphs, Blockquotes, Anchors
5.0 - Objects: class-based selectors which define undecorated design patterns, building blocks
        - Framework
6.0 - Components: specific designed components
        - Buttons
        - Header
        - Navigation 
7.0 - Utilities: utilities and helper classes with ability to override anything which goes before in the triangle, eg. hide helper class
        - Alignment	    
        - Color
        - Size

--------------------------------------------------------------*/
*{
    font: 300 1rem 'Roboto', sans-serif;
    
}

html, body {
    overflow-x: hidden;
}
/*--------------------------------------------------------------
4.0 - ELEMENTS 
-------------------------------------------------------------- */

/* TYPOGRAPHY */


h1, h2, h3{
    font-family: 'Tinos', serif;
}

h1{ 
    color: #fff;
    font-weight: 700;
    font-size: 3rem;
    
}

h2{ 
    font-weight: 700;
    font-size: 3rem;
    padding-bottom: .5em;
}

h3{
    font-weight: 600;
}

p {
    line-height: 1.7em;
}

.pull-quote p, h3 {
    font-size: 1.5rem;

}

body > section.bg-image > div > div > div > p {
    font-size: 1.1rem;
}

.bg-image p, .top-bar {
    font-weight: 500;
}
.bg-image p, .bg-teal{
    color: #fff;
}

.txt-center{
    text-align: center;
}

.pull-quote{
    text-align: center;
    
}
.pull-quote p {
    font-weight: 700;
}

p{
    font-size: 1rem;
}

body > section.grid-container > div > div:nth-child(3) > p {
    font-weight: 500;
    font-style: italic;
}

body > section.grid-container > div > div:nth-child(2) > p:nth-child(1) span{
    color: #358889;
    font-weight: 500;
}

body > section.grid-container > div > div:nth-child(2) > p:nth-child(2) span {
    color: rgb(170, 0, 0);
    font-weight: 500;
}

/* Lists */

#bulletpoints li{
    margin-bottom: .6em;
}

#bulletpoints > li span {
    color: #358889;
    padding-right: .5em;
}

li {
    margin: 0 auto;
    list-style: none;
  
}
ul{
    margin: 0 auto;
}
header li{
    padding-left: 0;
}

#example-menu > div > ul > li> a {
    font-weight: 500;
}

#example-menu > div > ul > li> a:hover {
    color: #4abdbe;
}

header nav li {
    display: block;
}

.sprites li{
    display: inline-block;
    margin:0 1em 0 0 ;
}


ul{
    margin-left: 0;
}

p a {
    color: #F1EFEF;
}


/* Media */

nav li img {
    width: 250px;
}

.bg-image{
   background-image: url(../img/hero-img.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   padding: 7rem 0;
}

/*--------------------------------------------------------------
5.0 - OBJECTS 
-------------------------------------------------------------- */

.bg-gray {
    padding: 1em 0;
}

/* FRAMEWORK */
.margin-bottom{
    margin: 3rem auto;
}

body > div:nth-child(5) > div, body > section.margin-bottom.grid-container, body > div.bg-teal.margin-bottom > div, body > div:nth-child(7) {
    margin: 100px 0 100px 0;
}

body > section.bg-teal > div > div > div > h3 {
    border-bottom: .1em solid #ffff ;
    width: 50%;
    padding-bottom: 1.5px;
}

events >body > section.grid-container > div > div:nth-child(1) {
    border-right: .1em solid #358889;
}

events > body > section.grid-container > div > div:nth-child(2) {
     padding-left: 4.5em;
}

body > section.grid-container {
    padding: 3em 0 3em;
}

body > div > div {
    margin: 0 auto;
}

/*--------------------------------------------------------------
6.0 - COMPONENTS 
-------------------------------------------------------------- */

/*-- HEADER --*/


.title-bar{
    background-color: #358889;
}
.top-bar, .top-bar ul {
    background-color: #F1EFEF;
}
.top-bar a{
    color: #358889;
}


/* BUTTONS */

.button {
    border-radius: 1px;
    border-color: #f1efef;
    background-color: transparent;

} 

.button:hover {
    background-color: #f1efef;
    color: #358889;
}


.btn {
    border-radius: 1px;
    border-color: #358889;
    background-color: #358889;
    padding: .6rem;
}

.btn:hover {
    background-color: #45b4b6;
    color: #f1efef;
}


/*-- NAVIGATION --*/

footer div div{
    display: inline-block;
    
}


footer{
    background-color: #f1efef;
    padding: 1rem;
}


/*-- sprites --*/
.fa-facebook-f, .fa-instagram {
    color: #fff;
    size: 2px;
  }

.fa-facebook-f:hover, .fa-instagram:hover {
    color: rgb(224, 224, 224);
  }

footer .fa-facebook-f, footer .fa-instagram{
    color: #358889;
}

footer .fa-facebook-f:hover, footer .fa-instagram:hover {
    color: #4abdbe;
}

header li {
    margin-left: 0;
}



/*--------------------------------------------------------------
7.0 - UTILITIES 
-------------------------------------------------------------- */

/*-- COLOR --*/

.bg-gray {
    background-color: #f1efef;
}

.bg-teal {
    background-color: #358889;
    padding: 4rem 0;
}


/*-- ALIGNMENT --*/

